<resources>
    <string name="app_name">QuizScores</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id">Number</string>
    <string name="quiz1">quiz1</string>
    <string name="quiz2">quiz2</string>
    <string name="quiz3">quiz3</string>
    <string name="quiz4">quiz4</string>
    <string name="quiz5">quiz5</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="show">Statistics</string>
    <string name="clear">Clear</string>
    <string name="high_score">High Score</string>
    <string name="low_score">Low Score</string>
    <string name="average">Average</string>
    <string name="zero">0.0</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
